--- a/style.css
+++ b/style.css
@@ -1,20 +1,62 @@
 *{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
-
-#user{
-    margin-bottom: 10px;
+body{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    flex-grow: 0;
+    align-items: center;
 }
-
-div#container{
-    display: grid; 
-    grid-template-columns: repeat(16,1fr); 
-    grid-template-columns: repeat(16,1fr);
-    width: 600px;
+#box{
+    border: 1px solid rgba(0, 0, 0, 0.7);
+    width: 15px;
+    height: 15px;
+    background-color: white;
+}
+#container{
+    border: 2px solid burlywood;
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(16, 1fr);
+    gap: 0;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 300px;
     height: 300px;
+    margin: 2rem 2rem;
+}
+#colorInput{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 100px;
+    height: 100px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
 
-#item:hover{
-    background-color: red;
+#colorInput::-webkit-color-swatch{
+    border-radius: 50%;
+    border: none;
 }
+
+#send, #erase{
+    padding: 15px 30px;
+    border: none;
+    border-radius: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    box-shadow: 2px 1px wheat;
+    margin: 10px 20px;
+}
+
+
+
 
