--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 #container{
     border: 2px solid burlywood;
     padding: 0;
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(16, 1fr);
     gap: 0;
