--- a/style.css
+++ b/style.css
@@ -13,22 +13,24 @@ body{
     background-image: url('./manyColors.png');
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100vw;
+    height: 100vh;
     
 }
 
 .casket{
-    border: 2px solid black;
+    border: 6px solid black;
     display: flex;
     flex-direction: row;
     padding: 30px 120px;
-    border-radius: 50px;
+    border-radius: 100px;
     background-color: rgb(165, 1, 1);
 }
 
 div#container{
     display: grid; 
-    width: 500px;
-    height: 500px;
+    width: 450px;
+    height: 450px;
     border: 1px solid black;
     
 }
@@ -54,31 +56,32 @@ div#container{
     flex-direction: column;
     justify-content:space-evenly;
     align-items: center;
-    width: 200px;
-    height: 500px;
+    width: 150px;
+    height: 450px;
     background-color: whitesmoke;
     border-radius: 50px 0px 0px 50px;
 }
-#send, #erase, #road,#rainbow{
+#send, #erase, #road, #rainbow, #eraseOne{
     text-align: center; 
-    width: 100px;
-    height: 100px;
+    width: 70px;
+    height: 70px;
     border: none;
     border-radius: 150px;
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
-    box-shadow: 2px 1px rgb(218, 198, 161);
+    box-shadow: 2px 1px rgb(189, 171, 139);
     background-color: rgb(230, 223, 223);
     margin: 10px 20px;
-    font-size: 15px;
+    font-size: 10px;
+    font-weight: 900;
 }
 
 #colorInput{
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    width: 100px;
-    height: 100px;
+    width: 70px;
+    height: 70px;
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -87,6 +90,7 @@ div#container{
 #colorInput::-webkit-color-swatch{
     border-radius: 50%;
     border: none;
+    box-shadow: 2px 1px rgb(189, 171, 139);
 }
 
 
