--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     justify-content: center;
     align-items: center;
     padding: 20px;
-    background-image: url('./manyColors.png');
+    background-image: url('./space.png');
     background-repeat: no-repeat;
     background-size: cover;
     width: 100vw;
@@ -18,50 +18,53 @@ body{
     
 }
 
-.casket{
-    border: 6px solid black;
-    display: flex;
-    flex-direction: row;
-    padding: 30px 120px;
-    border-radius: 100px;
-    background-color: rgb(165, 1, 1);
-}
-
 div#container{
     display: grid; 
     width: 450px;
     height: 450px;
-    border: 1px solid black;
+    border-top: 10px solid rgb(202, 4, 4);
+    border-bottom: 10px solid rgb(202, 4, 4);
+    background-color: white;
     
 }
 #item{
     display: flex;
     flex-direction: row;
-    /*border: 1px solid blue;*/
+    border: none;
     flex-grow: 0;
  
 }
 
 #subItem{
-    /*border: 1px solid yellow;*/
+    border: none;
     flex-grow: 1;
     background-color: white;
 
 }
 
-#otherItems{
-    border: 1px solid black;
-    border-right: none;
+#otherItemsLeft, #otherItemsRight{
     display: flex;
     flex-direction: column;
     justify-content:space-evenly;
     align-items: center;
     width: 150px;
     height: 450px;
-    background-color: whitesmoke;
-    border-radius: 50px 0px 0px 50px;
+    background-color: rgb(226, 218, 218);    
 }
-#send, #erase, #road, #rainbow, #eraseOne{
+#otherItemsLeft{
+    border-radius: 50px 0px 0px 50px;
+    border-left: 10px solid rgb(202, 4, 4);
+    border-top: 10px solid rgb(202, 4, 4);
+    border-bottom: 10px solid rgb(202, 4, 4);
+}
+#otherItemsRight{
+    border-radius: 0px 50px 50px 0px;
+    border-right: 10px solid rgb(202, 4, 4);
+    border-top: 10px solid rgb(202, 4, 4);
+    border-bottom: 10px solid rgb(202, 4, 4);
+}
+
+#send, #erase, #black, #rainbow, #eraseOne, #warm, #cold{
     text-align: center; 
     width: 70px;
     height: 70px;
@@ -74,23 +77,6 @@ div#container{
     margin: 10px 20px;
     font-size: 10px;
     font-weight: 900;
-}
-
-#colorInput{
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    width: 70px;
-    height: 70px;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-}
-
-#colorInput::-webkit-color-swatch{
-    border-radius: 50%;
-    border: none;
-    box-shadow: 2px 1px rgb(189, 171, 139);
 }
 
 
