--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 }
 body{
     display: flex;
+    flex-direction: column;
+    gap: 10px;
     justify-content: center;
     align-items: center;
     padding: 20px;
@@ -15,7 +17,35 @@ body{
     background-size: cover;
     width: 100vw;
     height: 100vh;
+}
+
+#ninketch{
+    display: flex;
     
+}
+h1{
+    font-size: 35px;
+    font-weight: 900;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: lightsalmon;
+
+}
+#subheading{
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    color: lightsalmon;    
+    background-color: rgb(255, 255, 255);
+    border-radius: 15px;
+    padding: 5px 15px;
+}
+
+#footer{
+    font-size: 20px;
+    font-weight: 600;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    color: lightsalmon;
 }
 
 div#container{
@@ -25,6 +55,7 @@ div#container{
     border-top: 10px solid rgb(202, 4, 4);
     border-bottom: 10px solid rgb(202, 4, 4);
     background-color: white;
+    
     
 }
 #item{
@@ -66,17 +97,17 @@ div#container{
 
 #send, #erase, #black, #rainbow, #eraseOne, #warm, #cold{
     text-align: center; 
-    width: 70px;
-    height: 70px;
-    border: none;
+    width: 80px;
+    height: 80px;
     border-radius: 150px;
+    border-color: rgb(0, 0, 0);
     font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
-    box-shadow: 2px 1px rgb(189, 171, 139);
     background-color: rgb(230, 223, 223);
     margin: 10px 20px;
     font-size: 10px;
     font-weight: 900;
+    box-shadow: 0px 6px black;
 }
 
 
